@@ -48,6 +48,8 @@
 #define REDIS_ZRANGE "ZRANGE"
 
 #define REDIS_MGET "MGET"
+#define REDIS_MSETNX "MSETNX"
+#define REDIS_MSET "MSET"
 #define REDIS_HGETALL "HGETALL"
 
 #define REDIS_SMEMBERS "SMEMBERS"
@@ -101,6 +103,40 @@ common::Error CommandTranslator::Hgetall(const NKey& key, command_buffer_t* cmds
   key_t key_str = key.GetKey();
   command_buffer_writer_t wr;
   wr << REDIS_HGETALL " " << key_str.GetKeyForCommandLine();
+  *cmdstring = wr.str();
+  return common::Error();
+}
+
+common::Error CommandTranslator::Mset(const std::vector<NDbKValue>& keys, command_buffer_t* cmdstring) {
+  if (!cmdstring) {
+    return common::make_error_inval();
+  }
+
+  command_buffer_writer_t wr;
+  wr << REDIS_MSET;
+  for (size_t i = 0; i < keys.size(); ++i) {
+    NKey key = keys[i].GetKey();
+    key_t key_str = key.GetKey();
+    std::string value_str = keys[i].GetValueForCommandLine();
+    wr << " " << key_str.GetKeyForCommandLine() << " " << value_str;
+  }
+  *cmdstring = wr.str();
+  return common::Error();
+}
+
+common::Error CommandTranslator::MsetNX(const std::vector<NDbKValue>& keys, command_buffer_t* cmdstring) {
+  if (!cmdstring) {
+    return common::make_error_inval();
+  }
+
+  command_buffer_writer_t wr;
+  wr << REDIS_MSETNX;
+  for (size_t i = 0; i < keys.size(); ++i) {
+    NKey key = keys[i].GetKey();
+    key_t key_str = key.GetKey();
+    std::string value_str = keys[i].GetValueForCommandLine();
+    wr << " " << key_str.GetKeyForCommandLine() << " " << value_str;
+  }
   *cmdstring = wr.str();
   return common::Error();
 }
