@@ -39,6 +39,8 @@ class CommandTranslator : public ICommandTranslator {
 
   common::Error Hgetall(const NKey& key, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
   common::Error Mget(const std::vector<NKey>& keys, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
+  common::Error Mset(const std::vector<NDbKValue>& keys, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
+  common::Error MsetNX(const std::vector<NDbKValue>& keys, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
 
   common::Error Smembers(const NKey& key, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
 
